# WWPDB.UTILS.WS_UTILS HISTORY

 8-Dec-2020  - V0.4 Correct python 3 deficiency