@@ -1,3 +1,4 @@
-# WWPDB.UTILS.WS_UTILS HISTORY
+# WWPDB_UTILS_WS_UTILS HISTORY
 
- 8-Dec-2020  - V0.4 Correct python 3 deficiency
+ 8-Dec-2020 - V0.4   - Python 3 uid generation correction.
+30-Dec-2020 - V0.4.1 - Changes to support PyJwt 2.0.0.
